Implement masked store
Conditionally store value from a pack based on
a pack of masks.

--- a/test/function/simd/store/CMakeLists.txt
+++ b/test/function/simd/store/CMakeLists.txt
@@ -13,7 +13,7 @@ set ( SOURCES
  ## range.logical.cpp
   scatter.arithmetic.cpp
   scatter.logical.cpp
- ## mask.arithmetic.cpp
+  mask.arithmetic.cpp
  ## mask.logical.cpp
 )
 
