--- a/test/doc/CMakeLists.txt
+++ b/test/doc/CMakeLists.txt
@@ -6,9 +6,12 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 SET( SOURCES
+    aligned_input_range.cpp
+    input_range.cpp
     reduce.simple.cpp
     reduce.phases.cpp
     reduce.phase.cpp
+    segmented_input_range.cpp
     transform.unary.cpp
     transform.binary.cpp
     shuffle.unary.cpp
