Provide clearer documentation for SWAR functions (#309)
* Complete shuffle doc
* Clarify some SWAR doc
* Clarify ranges doc

--- a/test/doc/CMakeLists.txt
+++ b/test/doc/CMakeLists.txt
@@ -6,11 +6,18 @@
 ##                            http://www.boost.org/LICENSE_1_0.txt
 ##===================================================================================================
 SET( SOURCES
+    aligned_input_range.cpp
+    input_range.cpp
     reduce.simple.cpp
     reduce.phases.cpp
     reduce.phase.cpp
+    segmented_input_range.cpp
     transform.unary.cpp
     transform.binary.cpp
+    shuffle.unary.cpp
+    shuffle.binary.cpp
+    shuffle.perm.cpp
+    shuffle.perm2.cpp
   )
 
 make_unit( "doc" ${SOURCES})
