--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -173,6 +173,7 @@ set ( SOURCES
       if_plus.cpp
       if_zero_else.cpp
       if_zero_else_one.cpp
+      ifrexp.cpp
       ilog2.cpp
       ilogb.cpp
       inc.regular.cpp
