adding bench to scalar inearbyint

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -164,6 +164,7 @@ set(SOURCES
     inc.regular.cpp
     inc.saturated.cpp
     indeg.cpp
+inearbyint.cpp
     inrad.cpp
     iround.cpp
     is_denormal.cpp
