--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -164,7 +164,8 @@ set(SOURCES
     inc.regular.cpp
     inc.saturated.cpp
     indeg.cpp
-inearbyint.cpp
+    inearbyint.fast.cpp
+    inearbyint.regular.cpp
     inrad.cpp
     iround.cpp
     is_denormal.cpp
