Reimplement fast inearbyint for scalar on x86 arch
Using *_ss intinsic provide a significant speed-up on X86 for inearbyint

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -164,6 +164,8 @@ set(SOURCES
     inc.regular.cpp
     inc.saturated.cpp
     indeg.cpp
+    inearbyint.fast.cpp
+    inearbyint.regular.cpp
     inrad.cpp
     iround.cpp
     is_denormal.cpp
