--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -118,6 +118,7 @@ set ( SOURCES
    exp.regular.cpp
    expm1.regular.cpp
    expm1.std.cpp
+   expocvt.cpp
    exponent.cpp
    exponentbits.cpp
    exprecnegc.cpp
