--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -131,6 +131,7 @@ set ( SOURCES
       exp2.cpp
       exp.cpp
       expm1.cpp
+      expocvt.cpp
       exponent.cpp
       exponentbits.cpp
       exprecnegc.cpp
