--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -127,7 +127,7 @@ set ( SOURCES
    firstbitunset.cpp
    floor.cpp
    fma.regular.cpp
-   fma.conformant.cpp
+   fma.pedantic.cpp
    fms.cpp
    fnma.cpp
    fnms.cpp
