--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -138,7 +138,7 @@ set ( SOURCES
       firstbitunset.cpp
       floor.cpp
       fma.regular.cpp
-      fma.conformant.cpp
+      fma.pedantic.cpp
       fms.cpp
       fnma.cpp
       fnms.cpp
