[API Change] Introducing pedantic_ decorator
accurate_, use_sing_bit and conformant_ decorator are merged into a single pedantic_ decorator. Using pedantic_(f) will trigger the implementation of f to become more precise/more corner cases aware version at the expense of performances.

Previous usage of conformant_ and other deprecated decorator can be repalce 1-for-1 with pedantic_.

--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -10,7 +10,7 @@ set(SOURCES
     abs.regular.cpp
     abs.saturated.cpp
     acos.regular.cpp
-    acos.accurate.cpp
+    acos.pedantic.cpp
     acosd.cpp
     acosh.cpp
     acospi.cpp
@@ -116,7 +116,7 @@ set(SOURCES
     firstbitunset.cpp
     floor.cpp
     fma.regular.cpp
-    fma.conformant.cpp
+    fma.pedantic.cpp
     fms.cpp
     fnma.cpp
     fnms.cpp
