--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -14,12 +14,12 @@ set ( SOURCES
    abs.saturated.cpp
    abs.std.cpp
    acos.regular.cpp
-   acos.accurate.cpp
+   acos.pedantic.cpp
    acosd.regular.cpp
-   acosd.accurate.cpp
+   acosd.pedantic.cpp
    acosh.cpp
    acospi.regular.cpp
-   acospi.accurate.cpp
+   acospi.pedantic.cpp
    acot.cpp
    acotd.cpp
    acotpi.cpp
@@ -127,7 +127,7 @@ set ( SOURCES
    firstbitunset.cpp
    floor.cpp
    fma.regular.cpp
-   fma.conformant.cpp
+   fma.pedantic.cpp
    fms.cpp
    fnma.cpp
    fnms.cpp
