modifying tests to fit decorators and adding a raw for double sse2

--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -286,7 +286,7 @@ set(SOURCES
     rrol.cpp
     rror.cpp
     rsqrt.regular.cpp
-    rsqrt.fast.cpp
+    rsqrt.raw.cpp
     safe_max.cpp
     safe_min.cpp
     sec.regular.cpp
@@ -324,7 +324,7 @@ set(SOURCES
     sqr.saturated.cpp
     sqrt1pm1.cpp
     sqrt.regular.cpp
-    sqrt.fast.cpp
+    sqrt.raw.cpp
     successor.cpp
     tan.regular.cpp
     tan.restricted.cpp
