pedantic + scalars rsqrt

--- a/exhaustive/function/scalar/CMakeLists.txt
+++ b/exhaustive/function/scalar/CMakeLists.txt
@@ -54,7 +54,9 @@ log1p.cpp
 log.cpp
 oneminus.cpp
 rec.cpp
-rsqrt.cpp
+rsqrt.regular.cpp
+rsqrt.raw.cpp
+rsqrt.pedantic.cpp
 sign.cpp
 signnz.cpp
 sinc.cpp
