--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -287,6 +287,7 @@ set(SOURCES
     rror.cpp
     rsqrt.regular.cpp
     rsqrt.raw.cpp
+    rsqrt.pedantic.cpp
     safe_max.cpp
     safe_min.cpp
     sec.regular.cpp
