sqrt unit tests

--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -322,6 +322,7 @@ set(SOURCES
     sqr.regular.cpp
     sqr.saturated.cpp
     sqrt1pm1.cpp
+    sqrt.regular.cpp
     sqrt.raw.cpp
     sqrt.std.cpp
     successor.cpp
