--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -143,7 +143,7 @@ set(SOURCES
     hi.cpp
     hmsb.cpp
     hypot.regular.cpp
-    hypot.fast.cpp
+    hypot.pedantic.cpp
     hypot.std.cpp
     iceil.cpp
     if_allbits_else.cpp
