i/frexp pedantic/regular

--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -137,7 +137,8 @@ set ( SOURCES
    fpclassify.regular.cpp
    fpclassify.std.cpp
    frac.cpp
-   frexp.cpp
+   frexp.regular.cpp
+   frexp.pedantic.cpp
    gamma.cpp
    gammaln.cpp
    genmaskc.cpp
@@ -172,7 +173,8 @@ set ( SOURCES
    if_zero_else.cpp
    if_zero_else_allbits.cpp
    if_zero_else_one.cpp
-   ifrexp.cpp
+   ifrexp.regular.cpp
+   ifrexp.pedantic.cpp
    ilog2.cpp
    ilogb.cpp
    inc.regular.cpp
