--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -147,7 +147,8 @@ set ( SOURCES
       fnma.cpp
       fnms.cpp
       frac.cpp
-      frexp.cpp
+      frexp.regular.cpp
+      frexp.pedantic.cpp
       gamma.cpp
       gammaln.cpp
       genmaskc.cpp
@@ -174,7 +175,8 @@ set ( SOURCES
       if_plus.cpp
       if_zero_else.cpp
       if_zero_else_one.cpp
-      ifrexp.cpp
+      ifrexp.regular.cpp
+      ifrexp.pedantic.cpp
       ilog2.cpp
       ilogb.cpp
       inc.regular.cpp
