Improve rec timing & precision
* Improve rec estimation
* Remove the use of fast_ decorator

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -287,7 +287,8 @@ set ( SOURCES
       predecessor.cpp
       prev.cpp
       prod.cpp
-      rec.cpp
+      rec.regular.cpp
+      rec.raw.cpp
       rem_pio2_cephes.cpp
       rem_pio2.cpp
       rem_pio2_medium.cpp
