--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -268,7 +268,7 @@ set(SOURCES
     predecessor.cpp
     prev.cpp
     rec.regular.cpp
-    rec.fast.cpp
+    rec.raw.cpp
     rem.regular.cpp
     rem.fast.cpp
     rem_pio2_cephes.cpp
