--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -157,7 +157,8 @@ set(SOURCES
     inc.regular.cpp
     inc.saturated.cpp
     indeg.cpp
-    inearbyint.cpp
+    inearbyint.regular.cpp
+    inearbyint.pedantic.cpp
     inrad.cpp
     interleave.cpp
     interleave_even.cpp
@@ -345,7 +346,6 @@ set(SOURCES
     touint.regular.cpp
     touint.saturated.cpp
     trunc.regular.cpp
-    trunc.fast.cpp
     two_add.cpp
     quadrant.cpp
     twopower.cpp
