--- a/test/function/scalar/CMakeLists.txt
+++ b/test/function/scalar/CMakeLists.txt
@@ -182,7 +182,8 @@ set ( SOURCES
    inc.regular.cpp
    inc.saturated.cpp
    indeg.cpp
-   inearbyint.cpp
+   inearbyint.regular.cpp
+   inearbyint.pedantic.cpp
    inrad.cpp
    insert.cpp
    iround.cpp
