--- a/bench/function/simd/CMakeLists.txt
+++ b/bench/function/simd/CMakeLists.txt
@@ -210,7 +210,8 @@ set(SOURCES
     is_positive.cpp
     is_real.cpp
     is_unord.cpp
-    ldexp.cpp
+    ldexp.pedantic.cpp
+    ldexp.regular.cpp
     lo.cpp
     log10.regular.cpp
     log1p.regular.cpp
@@ -261,7 +262,8 @@ set(SOURCES
     nextafter.cpp
     next.cpp
     none.cpp
-    nthroot.cpp
+    nthroot.regular.cpp
+    nthroot.pedantic.cpp
     oneminus.regular.cpp
     oneminus.saturated.cpp
     plus.regular.cpp
