trunc was not ok for simd double adding a pedantic toint to make the proper job

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -363,6 +363,7 @@ set ( SOURCES
       tofloat.cpp
       toint.regular.cpp
       toint.saturated.cpp
+      toint.more.cpp
       touint.regular.cpp
       touint.saturated.cpp
       trunc.cpp
