lo2,log10,log1p and tests

--- a/test/function/simd/CMakeLists.txt
+++ b/test/function/simd/CMakeLists.txt
@@ -244,9 +244,15 @@ set ( SOURCES
       ldexp.pedantic.cpp
       ldexp.regular.cpp
       lo.cpp
-      log10.cpp
-      log1p.cpp
-      log2.cpp
+      log1p.regular.cpp
+      log1p.musl.cpp
+      log1p.plain.cpp
+      log10.regular.cpp
+      log10.musl.cpp
+      log10.plain.cpp
+      log2.regular.cpp
+      log2.musl.cpp
+      log2.plain.cpp
       log.plain.cpp
       log.regular.cpp
       log.musl.cpp
