--- a/exhaustive/function/simd/CMakeLists.txt
+++ b/exhaustive/function/simd/CMakeLists.txt
@@ -60,7 +60,9 @@ log.cpp
 nthroot.cpp
 oneminus.cpp
 rec.cpp
-rsqrt.cpp
+rsqrt.regular.cpp
+rsqrt.raw.cpp
+rsqrt.pedantic.cpp
 sign.cpp
 signnz.cpp
 sinc.cpp
