When configuring without -DDEV, add the unit, tests etc.. target with explanation regarding -DDEV.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,5 +122,14 @@ if (DEFINED DEV)
     NS_include(coverage)
     enable_coverage(boost.simd)
   endif()
+else()
+  add_custom_target(tests 
+    COMMENT "Target tests requires 'cmake -DDEV=1 ..'")
+  add_custom_target(unit
+    COMMENT "Target unit requires 'cmake -DDEV=1 ..'")
+  add_custom_target(bench
+    COMMENT "Target bench requires 'cmake -DDEV=1 ..'")
+  add_custom_target(exhaustive
+    COMMENT "Target exhaustive requires 'cmake -DDEV=1 ..'")
 endif()
 
