--- a/bench/function/scalar/CMakeLists.txt
+++ b/bench/function/scalar/CMakeLists.txt
@@ -340,6 +340,7 @@ set(SOURCES
     toint.saturated.cpp
     touint.regular.cpp
     touint.saturated.cpp
+    trunc.raw.cpp
     trunc.regular.cpp
     trunc.std.cpp
     two_add.cpp
